# bianchi-maass-forms

./: .gitignore  ArchtKBessel.cpp  ArchtKBessel.h  Auxiliary.cpp  Auxiliary.h  Auxilliary.cpp  Auxilliary.h  BianchiMaassPointwise.cpp  BianchiMaassPointwise.h  BianchiMaassSearch.cpp  BianchiMaassSearch.h  CMakeLists.txt  CoefficientComputer.cpp  CoefficientComputer.h  EricNT.cpp  EricNT.h  Euclidean_Bianchi_Maass_forms.sage  FunctionToEvaluate.cpp  FunctionToEvaluate.h  ImaginaryQuadraticIntegers.cpp  ImaginaryQuadraticIntegers.h  Index.cpp  Index.h  KBessel.cpp  KBessel.h  KBesselApproximator.cpp  KBesselApproximator.h  KBesselExact.cpp  KBesselExact.h  KBesselReal.cpp  KBesselReal.h  PlotWindow.cpp  PlotWindow.h  Plotter.cpp  Plotter.h  Quaternion.cpp  Quaternion.h  README.md  SL2C.cpp  SL2C.h  (+5 more)
Computation Logs/: Computation Job Data.xlsx  README.txt
Computation Logs/163/163C/: slurm-2494016.out  slurm-2667533.out  slurm-2684633.out  slurm-2692404.out  slurm-3242965.out  slurm-3272519.out  slurm-3306586.out  slurm-3309271.out  slurm-3314634.out
Computation Logs/163/163D/: slurm-2494017.out  slurm-2667532.out  slurm-2684632.out  slurm-3309270.out  slurm-3314635.out  slurm-3320075.out  slurm-3387936.out
Computation Logs/163/163_Final_Check/: slurm-3423886.out
Computation Logs/19/19C/: slurm-2494011.out  slurm-3253434.out  slurm-3278752.out  slurm-3306581.out  slurm-3311031.out
Computation Logs/19/19D/: slurm-2494010.out  slurm-3253431.out  slurm-3278751.out  slurm-3306560.out  slurm-3310951.out
Computation Logs/19/19_Final_Check/: slurm-3313436.out  slurm-3314642.out
Computation Logs/43/43C/: slurm-2494012.out  slurm-2667529.out  slurm-3306603.out  slurm-3311089.out  slurm-3314047.out  slurm-3318825.out  slurm-3326362.out
Computation Logs/43/43D/: slurm-2494013.out  slurm-2667528.out  slurm-3306582.out  slurm-3311090.out  slurm-3314046.out  slurm-3318824.out  slurm-3326359.out
Computation Logs/43/43_Final_Check/: slurm-3423473.out  slurm-3424438.out  slurm-3451096.out
Computation Logs/67/67C/: slurm-2494015.out  slurm-2667531.out  slurm-3306585.out
Computation Logs/67/67D/: slurm-2494014.out  slurm-2667530.out  slurm-2684631.out  slurm-3306584.out
Computation Logs/67/67_Final_Check/: slurm-3313457.out
Output/Search/Coarse/: coarse_163_C.txt  coarse_163_D.txt  coarse_19_C.txt  coarse_19_D.txt  coarse_43_C.txt  coarse_43_D.txt  coarse_67_C.txt  coarse_67_D.txt
Output/Search/Fine/: fine_163_C.txt  fine_163_D.txt  fine_19_C.txt  fine_19_D.txt  fine_43_C.txt  fine_43_D.txt  fine_67_C.txt  fine_67_D.txt
Output/Search/Medium/: medium_163_C.txt  medium_163_D.txt  medium_19_C.txt  medium_19_D.txt  medium_43_C.txt  medium_43_D.txt  medium_67_C.txt  medium_67_D.txt
Output/Tested, Hand Checked, and Final/163/C/: 2.443620257022089.txt  3.14502001154539.txt  3.213645490779557.txt  4.477564143260058.txt
Output/Tested, Hand Checked, and Final/163/D/: 3.264307438408941.txt  4.979064073219422.txt
Output/Tested, Hand Checked, and Final/163/G/: 3.264307438408941.txt  4.979064073219422.txt
Output/Tested, Hand Checked, and Final/163/H/: 2.443620257022089.txt  3.213645490779557.txt
Output/Tested, Hand Checked, and Final/19/C/: 10.02518769922103.txt  10.2028729596168.txt  10.71883586885431.txt  10.77027948203376.txt  11.41473128820399.txt  11.44577392913305.txt  11.59739101656688.txt  11.70924177598257.txt  12.08243467568031.txt  12.62940085910969.txt  12.70037199365083.txt  12.77727648717218.txt  13.00221682840062.txt  13.15283993440404.txt  13.23757546954411.txt  13.34575991504278.txt  13.48055430347985.txt  13.81096806450012.txt  14.15494300826669.txt  14.41478203521055.txt  14.44190836107019.txt  14.58804337563001.txt  14.92779417001887.txt  14.9687060609957.txt  15.03414413095462.txt  15.06012889669297.txt  15.09427374038096.txt  15.40337910587636.txt  16.06878948334849.txt  16.14313394554836.txt  16.26047551957529.txt  16.45193421161756.txt  16.49858007624159.txt  16.52504327826453.txt  16.60398223589079.txt  17.17022653854918.txt  17.27514606150105.txt  17.2837348621387.txt  17.31401330979286.txt  17.53780672497153.txt  (+77 more)
Output/Tested, Hand Checked, and Final/19/D/: 10.30834670698963.txt  10.5269968301733.txt  10.56374967068566.txt  11.04036961807967.txt  11.14535892073414.txt  11.31599314417971.txt  11.47911440972592.txt  11.76328377719356.txt  11.86949080563855.txt  12.06999652115603.txt  12.10025713752637.txt  12.18652582122059.txt  12.64761005043561.txt  13.11048796566661.txt  13.13089430003687.txt  13.39012890646693.txt  13.87135772785997.txt  14.05262337109217.txt  14.29977586379131.txt  14.42445858491591.txt  14.68099657517871.txt  14.83519375396517.txt  15.0193727383336.txt  15.11754228974176.txt  15.26992520577943.txt  15.53829227114553.txt  15.63458971586149.txt  15.74926143446013.txt  15.7926076603015.txt  15.99624589902616.txt  16.12255643290885.txt  16.17111728801592.txt  16.36749775658706.txt  16.72665766991966.txt  17.01132470082819.txt  17.03394156220748.txt  17.0799903007585.txt  17.12020736039655.txt  17.16026985903269.txt  17.36132507466685.txt  (+77 more)
Output/Tested, Hand Checked, and Final/19/G/: 10.56374967068566.txt  11.31599314417971.txt  11.86949080563855.txt  13.11048796566661.txt  13.13089430003687.txt  13.27979030545185.txt  14.05262337109217.txt  14.29977586379131.txt  14.42445858491591.txt  15.26992520577943.txt  15.53829227114553.txt  15.74926143446013.txt  15.99624589902616.txt  16.12255643290885.txt  16.59929124526635.txt  16.72665766991966.txt  17.01132470082819.txt  17.03394156220748.txt  17.50941290041234.txt  17.67838683496484.txt  17.83616215357496.txt  17.96082796847419.txt  17.99779564616972.txt  (+32 more)
Plotting/: Bianchi-Maass Plots.ipynb  KBesselPrecomputer.sage  README.txt  fd_wireframe.sage
archt/: archt.c  kbessel.c  lngamma.c
include/: Auxiliary.h  BianchiMaassSearch.h  ImaginaryQuadraticIntegers.h  Index.h  Quaternion.h  archtKBessel.h
src/: Auxiliary.cpp  BianchiMaassSearch.cpp  ImaginaryQuadraticIntegers.cpp  Index.cpp  KBessel.cpp  KBesselReal.cpp  Quaternion.cpp  SL2C.cpp  archtKBessel.cpp  main.cpp
(+3149 files in other folders)
